manifests/acme-resources/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shepard-gateway
  namespace: shepard
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "$SHEPARD_DNS_NAME"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: shepard-ingress-cert
      hosts:
        - "$SHEPARD_DNS_NAME"
